# epi-downloader

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  epi_downloader.py  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yml  pyinstaller.yml
epi-downloader/: __main__.py  config.py
epi_downloader/: __init__.py  __main__.py
tests/: __init__.py
